--- a/html/about.html
+++ b/html/about.html
@@ -6,6 +6,7 @@
 		<link href="../css/style1.css" rel="stylesheet" type="text/css" />
 		<script type="text/javascript" src="../js/eventsManager.js"></script>
 		<script type="text/javascript" src="../js/lunar1.js"></script>
+		<script type="text/javascript" src="../js/weather.js"></script>
 	</head>
 	<body>
 	<div id="header"><!-- div means to divide pages into several parts -->
@@ -15,7 +16,6 @@
 			<div id="timer"><!-- show current time -->
 			</div>
 			<div id="weather">
-				<object type="text/html" data="http://www.265.com/weather.htm" name="I2"></object>
 			</div>
 			<div id="tagline">
 				<p><strong>致力遵守：<abbr title="Keep It Simple and Stupid">KISS原则</abbr>与Web标准</strong></p>
