--- a/html/images.html
+++ b/html/images.html
@@ -7,6 +7,7 @@
 		<script type="text/javascript" src="../js/eventsManager.js"></script>
 		<script type="text/javascript" src="../js/slide.js"></script>
 		<script type="text/javascript" src="../js/lunar1.js"></script>
+		<script type="text/javascript" src="../js/weather.js"></script>
 	</head>
 	<body>
 		<div id="header"><!-- div means to divide pages into several parts -->
