--- a/html/resources.html
+++ b/html/resources.html
@@ -15,6 +15,8 @@
 </script>
     <script type="text/javascript" src="../js/lunar1.js">
 </script>
+    <script type="text/javascript" src="../js/weather.js">
+</script>
 </head>
 
 <body>
@@ -30,9 +32,6 @@
         </div>
 
         <div id="weather">
-            <object type="text/html" data="http://www.265.com/weather.htm"
-            name="I2">
-                </object>
         </div>
 
         <div id="tagline">
