--- a/html/surfing.html
+++ b/html/surfing.html
@@ -10,6 +10,7 @@
 		<script type="text/javascript" src="../js/eventsManager.js"></script>
 		<script type="text/javascript" src="../js/multiSearch.js"></script>
 		<script type="text/javascript" src="../js/lunar1.js"></script>
+		<script type="text/javascript" src="../js/weather.js"></script>
 		<script type="text/javascript" src="../js/drag.js"></script>
 	</head>
 	<body>
@@ -20,7 +21,6 @@
 			<div id="timer"><!-- show current time -->
 			</div>
 			<div id="weather">
-				<object type="text/html" data="http://www.265.com/weather.htm" name="I2"></object>
 			</div>
 			<div id="tagline">
 				<p><strong>致力遵守：<abbr title="Keep It Simple and Stupid">KISS原则</abbr>与Web标准</strong></p>
