--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 </script>
     <script type="text/javascript" src="js/lunar1.js">
 </script>
+    <script type="text/javascript" src="js/weather.js">
+</script>
     <script type="text/javascript" src="js/drag.js">
 </script>
 </head>
@@ -35,9 +37,9 @@
         </div>
 
         <div id="weather">
-            <object type="text/html" data="http://www.265.com/weather.htm"
+            <!--<object type="text/html" data="http://www.265.com/weather.htm"
             name="I2">
-                </object>
+                </object>-->
         </div>
 
         <div id="tagline">
@@ -107,7 +109,8 @@
             <p><a rel="license" href=
             "http://creativecommons.org/licenses/by-sa/2.5/cn/"><img alt=
             "Creative Commons License" style="border-width:0" src=
-            "http://i.creativecommons.org/l/by-sa/2.5/cn/88x31.png" /></a><br />
+            "img/80x15.png"
+           /></a><br />
 
             本作品采用<a rel="license" href=
             "http://creativecommons.org/licenses/by-sa/2.5/cn/">知识共享署名-相同方式共享
