--- a/html/music.html
+++ b/html/music.html
@@ -13,6 +13,8 @@
 </script>
     <script type="text/javascript" src="../js/lunar1.js">
 </script>
+    <script type="text/javascript" src="../js/weather.js">
+</script>
 </head>
 
 <body>
@@ -28,9 +30,6 @@
         </div>
 
         <div id="weather">
-            <object type="text/html" data="http://www.265.com/weather.htm"
-            name="I2">
-                </object>
         </div>
 
         <div id="tagline">
