.ico image now can be shown in major pages.

--- a/html/about.html
+++ b/html/about.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>关于</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<link href="../img/favicon.ico" rel="SHORTCUT ICON" />
 		<link href="../css/style1.css" rel="stylesheet" type="text/css" />
 		<script type="text/javascript" src="../js/eventsManager.js"></script>
 		<script type="text/javascript" src="../js/lunar1.js"></script>
@@ -31,10 +32,6 @@
 			<a href="about.html" class="focus" >关于</a>
 		</h2>
 		</div><!-- end of wecando -->
-		<div id="version">
-		<h2>版本号</h2>
-		<p>当前版本号：1.0</p>
-		</div>
 		<div id="releasenotes">
 		<h2>Release Notes</h2>
 		<p class="version">Version 1.1(2010/08/15)</p>
@@ -94,7 +91,7 @@
 		<p><strong>新做了决定，本站点作品(不包含引文)采用<em>知识共享署名-相同方式共享 2.5 中国大陆许可协议</em>进行许可。其条款可以通过点击首页下方的相关链接获得。也可以在<a href="http://creativecommons.org/licenses/by-sa/2.5/cn/">这里</a>查看。</strong></p>
 		<p>版权归我所有，呵呵。当然，引文的版权仍归其原作者享有。许可的问题相当令人头疼，看看现在已经有多少个各不相同的许可证吧。</p>
 		<p>许可：您可以自由地复制网站上的各种信息（文本，图片等等）。但是请注意，引文除外。（它们对复制、修改、再发行的许可可能有其他的要求。<strong>请注意原作者的声明。</strong>）</p>
-		<p>我很希望html, css的初学者（基本上等于写网站的初学者）能从这个站点得到一些帮助。其实我也是个初学者。：）</p>
+		<p>我很希望html, css的初学者（基本上等于写网站的初学者）能从这个站点得到一些帮助。其实我也是个初学者。:-)</p>
 		</div>
 		</div> <!-- end of maincontent div -->
 		<div id="bottom">
