--- a/html/music.html
+++ b/html/music.html
@@ -8,6 +8,7 @@
 
     <title>Play good ogg music!</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link href="../img/favicon.ico" rel="SHORTCUT ICON" />
     <link href="../css/style1.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="../js/eventsManager.js/">
 </script>
@@ -63,7 +64,7 @@
             Vorbis虽然还不普及，但在音乐软件、游戏音效、便携播放器、网络浏览器上都得到广泛支持。</p>
 
             <p>更多内容，可以参看<a href=
-            "http://baike.baidu.com/view/99249.htm">百度百科</a></p>
+            "http://baike.baidu.com/view/99249.htm">百度百科</a>。</p>
 
             <h2>播放器软件</h2>
 
