--- a/html/surfing.html
+++ b/html/surfing.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>这是上网的门户</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<link href="favicon.ico" rel="SHORTCUT ICON" />
+		<link href="../img/favicon.ico" rel="SHORTCUT ICON" />
 		<link href="../css/style1.css" rel="stylesheet" type="text/css" />
 		<link href="../css/surfing.css" rel="stylesheet" type="text/css" />
 		<link href="../css/drag.css" rel="stylesheet" type="text/css" />
@@ -89,4 +89,3 @@
 		</div>
 	</body>
 </html>
-<!-- vim:set et sw=4: -->
