--- a/html/images.html
+++ b/html/images.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Lots of images</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<link href="../img/favicon.ico" rel="SHORTCUT ICON" />
 		<link href="../css/style1.css" rel="stylesheet" type="text/css" />
 		<script type="text/javascript" src="../js/eventsManager.js"></script>
 		<script type="text/javascript" src="../js/slide.js"></script>
