--- a/html/resources.html
+++ b/html/resources.html
@@ -8,6 +8,7 @@
 
     <title>本站资源</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link href="../img/favicon.ico" rel="SHORTCUT ICON" />
     <link href="../css/style1.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="../js/eventsManager.js">
 </script>
