Add mathml test page link into resources.html

--- a/html/resources.html
+++ b/html/resources.html
@@ -25,7 +25,7 @@
         <!-- div means to divide pages into several parts -->
 
         <div id="sitebranding">
-            <h1>这里有一些资料</h1>
+            <h1>资料</h1>
         </div>
 
         <div id="timer">
@@ -36,8 +36,7 @@
         </div>
 
         <div id="tagline">
-            <p><strong>致力遵守：<abbr title=
-            "Keep It Simple and Stupid">KISS原则</abbr>与Web标准</strong></p>
+            <p><strong>向 Wiki 看齐</strong></p>
         </div>
 
         <div id="search">
@@ -92,6 +91,7 @@
                     <li><a href="fvwm.html">fvwm</a></li>
                     <li><a href="tex.html">TeX</a></li>
                     <li><a href="matlab.html">Matlab</a></li>
+                    <li><a href="math-test.xhtml">MathML</a></li>
                     <li><a href=
                     "C_operator_priority_list.html">C语言运算符优先级详细列表</a></li>
 
