--- a/html/form.html
+++ b/html/form.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Fill a form</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<link href="style1.css" rel="stylesheet" type="text/css" />
+		<link href="../css/style1.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<div>
@@ -37,4 +37,3 @@
 		</div>
 	</body>
 </html>
-	<!-- vim:set et sw=4: -->
