--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 </script>
     <script type="text/javascript" src="js/drag.js">
 </script>
+    <script type="text/javascript" src="js/jquery.js">
+</script>
+    <script type="text/javascript" src="js/hide.js">
+</script>
 </head>
 
 <body>
@@ -87,6 +91,19 @@
         </div><!-- end of wecando -->
         <div class="dragAble" style="width: 30%;"> 测试一下可拖动 </div>
         <div class="box_rgba dragAble" style="width: 30%;"> 测试一下透明和可拖动</div>
+        <div class="clickhide"> 点击我，我就会消失。</div>
+        <div class="clickhideslow"> 点击我，我会慢慢消失。</div>
+        <div class="clickfadeout"> 点击我，我会fade out。</div>
+
+        <div class="panel">
+<pre>
+白日依山尽，
+黄河入海流。
+欲穷千里目，
+更上一层楼。
+</pre>
+        </div>
+        <p class="flip">显示/隐藏《登鹳雀楼》内容</p>
 
         <p>欢迎来到我的个人主页。希望你能在这里发现有用或者有趣的东西。至于这里究竟有什么东西，你就慢慢的发掘吧。:-)</p>
     </div><!-- end of maincontent -->
