add independent C page

--- a/html/resources.html
+++ b/html/resources.html
@@ -90,11 +90,9 @@
                     <li><a href="vim.html">VIM</a></li>
                     <li><a href="fvwm.html">fvwm</a></li>
                     <li><a href="tex.html">TeX</a></li>
+                    <li><a href="cprogramming.html">C语言</a></li>
                     <li><a href="matlab.html">Matlab</a></li>
                     <li><a href="math-test.xhtml">MathML</a></li>
-                    <li><a href=
-                    "C_operator_priority_list.html">C语言运算符优先级详细列表</a></li>
-
                     <li><a href=
                     "../txt/Ati_and_Nvidia_graphics_naming.txt">ATI与Nvidia显卡命名规则</a></li>
                 </ol>
@@ -137,9 +135,6 @@
 
                     <li><a href=
                     "http://www.jb51.net/article/5616.htm">漂亮的Slider效果类终于封装成功_javascript技巧_脚本之家</a></li>
-
-                    <li><a href="http://learn.akae.cn/media/index.html">Linux
-                    C编程一站式学习</a></li>
 
                     <li><a href="http://www.jb51.net/article/20779.htm">PHP
                     CKEditor 上传图片实现代码_php技巧_脚本之家</a></li>
