--- a/html/cprogramming.html
+++ b/html/cprogramming.html
@@ -35,6 +35,19 @@
             <a href="../html/music.html">OGG音乐</a> <a href=
             "../html/about.html">关于</a></h2>
         </div><!-- end of wecando -->
+        <p>C 语言是一门很有历史的程序设计语言，
+        同样也是如今最流行（使用广泛）的语言之一。</p>
+
+        <p>C 语言诞生于1972 年，设计者是AT&amp;T Bell 实验室的
+        Dennis M. Ritchie 。它的最初应用就是重写了Unix。<p>
+        <p>C语言的特点是高效、灵活。它的移植性很好。因为它兼有高级语言和
+        汇编语言的特点，所以它有时候会被称为``中级语言''。
+        它属于函数式编程语言。</p>
+
+        <p>指针是C语言的精华。</p>
+
+        <p>查看GNU BUILD SYSTEM手册，使用info autoconf。
+        自动化得到Makefile的流程图参考info autoconf 的Making configure Scripts一节。</p>
 
         <p>下面列出一些在线资料</p>
 
@@ -55,15 +68,8 @@
     </div><!-- end of maincontent -->
 
     <div id="bottom">
-        <div class="shadow">
-            <a href="html/libra.html">关于我</a> 与我联系：<a href=
-            "mailto:alick9188@163.com">邮箱</a> 或者 <abbr title=
-            "Add me: alick9188@gmail.com">Google talk</abbr>
-        </div>
-
         <div class="tiny">
-            <p><a href="http://bluefish.openoffice.nl/">Made with formerly
-            Bluefish HTML editor and now VIM.</a></p>
+            <p>Made with VIM.</p>
 
             <p><a href="http://validator.w3.org/">Valid XHTML 1.0 Strict</a>
             <span class="fun">推荐使用良好支持标准的浏览器</span><a href=
@@ -72,12 +78,12 @@
             <p><a rel="license" href=
             "http://creativecommons.org/licenses/by-sa/2.5/cn/"><img alt=
             "Creative Commons License" style="border-width:0" src=
-            "http://i.creativecommons.org/l/by-sa/2.5/cn/88x31.png" /></a><br />
+            "../img/80x15.png" /></a><br />
 
             本作品采用<a rel="license" href=
             "http://creativecommons.org/licenses/by-sa/2.5/cn/">知识共享署名-相同方式共享
             2.5 中国大陆许可协议</a>进行许可。</p>
         </div>
-    </div><!-- vim:set et sw=4: -->
+    </div>
 </body>
 </html>
