--- a/html/cprogramming.html
+++ b/html/cprogramming.html
@@ -46,24 +46,30 @@
 
         <p>指针是C语言的精华。</p>
 
-        <p>查看GNU BUILD SYSTEM手册，使用info autoconf。
+        <p>查看GNU BUILD SYSTEM手册，使用<span class="cmdinline">info autoconf</span>。
         自动化得到Makefile的流程图参考info autoconf 的Making configure Scripts一节。</p>
 
         <p>下面列出一些在线资料</p>
 
         <ol>
             <li><a href=
-            "C_operator_priority_list.html">C语言运算符优先级详细列表</a></li>
+                "C_operator_priority_list.html">C语言运算符优先级详细列表</a></li>
 
             <li><a href=
-            "http://www.gnu.org/software/hello/manual/autoconf/Signed-Overflow-Advice.html#Signed-Overflow-Advice">
-            Practical Advice for Signed Overflow Issues</a></li>
+                "http://www.gnu.org/software/hello/manual/autoconf/Signed-Overflow-Advice.html#Signed-Overflow-Advice">
+                Practical Advice for Signed Overflow Issues</a></li>
+
+            <li><a href="http://hi.baidu.com/jlyan/blog/item/6e6cdbf531ba1e2fbc3109f1.html">辨识类型：右左法则
+            </a></li>
 
             <li><a href="http://learn.akae.cn/media/index.html">Linux
-            C编程一站式学习</a></li>
+                C编程一站式学习</a></li>
 
             <li><a href="http://www.iso-9899.info/wiki/Main_Page">##C on
-            Freenode Wiki</a></li>
+                Freenode Wiki</a></li>
+
+            <li><a href="http://www.cas.mcmaster.ca/~carette/SE3M04/2004/slides/CCodingStyle.html">C Coding Style Notes</a></li>
+
         </ol>
     </div><!-- end of maincontent -->
 
