--- a/html/tex.html
+++ b/html/tex.html
@@ -46,6 +46,9 @@
         "ftp://ftp.ctex.org/mirrors/CTAN/">ctex的镜像</a>和<a href=
         "ftp://mirrors.xmu.edu.cn/CTAN/">厦门大学的镜像</a>。</p>
 
+        <p>用于TeX的文档字数统计工具：
+        <pre>texcount -chinese texfile</pre>
+
         <p>下面列出一些在线资料</p>
 
         <ol>
