--- a/html/cprogramming.html
+++ b/html/cprogramming.html
@@ -65,6 +65,9 @@
             <li><a href="http://learn.akae.cn/media/index.html">Linux
                 C编程一站式学习</a></li>
 
+            <li><a href="http://net.pku.edu.cn/~yhf/linux_c/">
+                Linux常用C函数</a></li>
+
             <li><a href="http://www.iso-9899.info/wiki/Main_Page">##C on
                 Freenode Wiki</a></li>
 
