more online utils and add a good sidebar

--- a/html/about.html
+++ b/html/about.html
@@ -26,16 +26,19 @@
             <h1>关于</h1>
         </div>
 
+        <div id="tagline">
+            <p><strong>关于本站</strong></p>
+        </div>
+
+
+    </div><!-- end of header -->
+
+    <div id="sidebar">
         <div id="timer">
             <!-- show current time -->
         </div>
 
         <div id="weather"></div>
-
-        <div id="tagline">
-            <p><strong>致力遵守：<abbr title=
-            "Keep It Simple and Stupid">KISS原则</abbr>与Web标准</strong></p>
-        </div>
     </div><!-- end of header -->
 
     <div id="maincontent">
