--- a/html/images.html
+++ b/html/images.html
@@ -15,18 +15,21 @@
 			<div id="sitebranding">
 				<h1>图片浏览</h1>
 			</div>
+			<div id="tagline">
+				<p><strong>无图无真相</strong></p>
+        	</div>
+		
+		</div> <!-- end of header -->
+
+                        <div id="sidebar">
 			<div id="timer"><!-- show current time -->
 			</div>
 			<div id="weather">
 				<!--
 				<object type="text/html" data="http://www.265.com/weather.htm" name="I2"></object>
 				-->
+		</div> <!-- end of sidebar -->
 			</div>
-			<div id="tagline">
-				<p><strong>致力遵守：<abbr title="Keep It Simple and Stupid">KISS原则</abbr>与Web标准</strong></p>
-        	</div>
-		
-		</div> <!-- end of header -->
 		<div id="maincontent">
 			<div id="wecando" class="shadow">
 		<h2><a href="../index.html">首页</a>
