--- a/html/music.html
+++ b/html/music.html
@@ -26,18 +26,19 @@
             <h1>音乐分享</h1>
         </div>
 
+        <div id="tagline">
+            <p><strong>致力遵守：<abbr title=
+            "Keep It Simple and Stupid">KISS原则</abbr>与Web标准</strong></p>
+        </div>
+    </div><!-- end of header -->
+    <div id="sidebar">
         <div id="timer">
             <!-- show current time -->
         </div>
 
         <div id="weather">
         </div>
-
-        <div id="tagline">
-            <p><strong>致力遵守：<abbr title=
-            "Keep It Simple and Stupid">KISS原则</abbr>与Web标准</strong></p>
-        </div>
-    </div><!-- end of header -->
+    </div><!-- end of sidebar -->
 
     <div id="maincontent">
         <div id="wecando" class="shadow">
