--- a/html/resources.html
+++ b/html/resources.html
@@ -27,16 +27,17 @@
         <div id="sitebranding">
             <h1>资料</h1>
         </div>
+        <div id="tagline">
+            <p><strong>向 Wiki 看齐</strong></p>
+        </div>
+    </div><!-- end of header -->
 
+    <div id="sidebar">
         <div id="timer">
             <!-- show current time -->
         </div>
 
         <div id="weather">
-        </div>
-
-        <div id="tagline">
-            <p><strong>向 Wiki 看齐</strong></p>
         </div>
 
         <div id="search">
@@ -51,18 +52,18 @@
                     <!--<input type="radio" name="sitesearch" value="http://learn.tsinghua.edu.cn:8080/" /><span class="fun">tsinghuaren</span>-->
                      <select id="select">
                         <option selected="selected" value="0">
-                            google.com.hk
+                            google hk
                         </option>
 
                         <option value="1">
-                            google.com.hk/linux
+                            google hk linux
                         </option>
                     </select> <input type="submit" name="btnG" value="Go"
                     onclick="multi_search()" />
                 </fieldset>
             </form>
         </div><!-- end of search div -->
-    </div><!-- end of header -->
+    </div><!-- end of sidebar -->
 
     <div id="maincontent">
         <div id="wecando" class="shadow">
