--- a/html/surfing.html
+++ b/html/surfing.html
@@ -32,16 +32,18 @@
             <h1>常用站点</h1>
         </div>
 
+        <div id="tagline">
+            <p><strong>致力遵守：<abbr title=
+            "Keep It Simple and Stupid">KISS原则</abbr>与Web标准</strong></p>
+        </div>
+    </div><!-- end of header -->
+
+    <div id="sidebar">
         <div id="timer">
             <!-- show current time -->
         </div>
 
         <div id="weather"></div>
-
-        <div id="tagline">
-            <p><strong>致力遵守：<abbr title=
-            "Keep It Simple and Stupid">KISS原则</abbr>与Web标准</strong></p>
-        </div>
 
         <div id="search">
             <!-- SiteSearch Google copyed from Google but modified-->
@@ -56,18 +58,18 @@
                     <!--<input type="radio" name="sitesearch" value="http://learn.tsinghua.edu.cn:8080/" /><span class="fun">tsinghuaren</span>-->
                      <select id="select">
                         <option selected="selected" value="0">
-                            google.com.hk
+                            google hk
                         </option>
 
                         <option value="1">
-                            google.com.hk/linux
+                            google hk linux
                         </option>
                     </select> <input type="submit" name="btnG" value="Go"
                     onclick="multi_search()" />
                 </fieldset>
             </form>
         </div><!-- end of search div -->
-    </div><!-- end of header -->
+    </div><!-- end of sidebar -->
 
     <div id="maincontent">
         <div id="wecando" class="shadow">
@@ -86,15 +88,22 @@
             </div>
 
             <div class="siteclass dragAble">
-                搜索： <a href="http://www.google.com">Google.com</a> <a href=
-                "http://www.google.com/linux">Linux搜索</a>
+                搜索：
+                <a href="http://www.google.com">Google.com</a>
+                <a href= "http://www.google.com/linux">Linux搜索</a>
+                <a href="http://www.baidu.com/">Baidu</a>
             </div>
 
             <div class="siteclass dragAble">
-                论坛： <a href=
-                "http://www.google.com/reader/view/?hl=en&amp;tab=wy">Google
-                Reader</a> <a href="http://www.linuxdiyf.com/bbs">红联BBS</a>
+                论坛：
+                <a href=
+                    "http://www.google.com/reader/view/?hl=en&amp;tab=wy">Google
+                    Reader</a>
+                <a href="http://www.linuxdiyf.com/bbs">红联BBS</a>
                 <a href="http://passport.renren.com/PLogin.do">上校内</a>
+                <a href="http://linux.cn/">linux.cn</a>
+                <a href="http://hi.baidu.com/alick_9188/home">baidu hi</a>
+
             </div>
 
             <div class="siteclass dragAble">
