--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
             <h1>欢迎光临</h1>
         </div>
 
+        <div id="tagline">
+            <p><strong>致力遵守：<abbr title=
+            "Keep It Simple and Stupid">KISS原则</abbr>与Web标准</strong></p>
+        </div>
+    </div><!-- end of header -->
+
+    <div id="sidebar">
         <div id="timer">
             <!-- show current time -->
             <!--<object type="text/html" data="http://www.265.com/time.html"></object>-->
@@ -44,11 +51,6 @@
             <!--<object type="text/html" data="http://www.265.com/weather.htm"
             name="I2">
                 </object>-->
-        </div>
-
-        <div id="tagline">
-            <p><strong>致力遵守：<abbr title=
-            "Keep It Simple and Stupid">KISS原则</abbr>与Web标准</strong></p>
         </div>
 
         <div id="search">
@@ -66,18 +68,18 @@
                     <!--<input type="radio" name="sitesearch" value="http://learn.tsinghua.edu.cn:8080/" /><span class="fun">tsinghuaren</span>-->
                      <select id="select">
                         <option selected="selected" value="0">
-                            google.com.hk
+                            google hk
                         </option>
 
                         <option value="1">
-                            google.com.hk/linux
+                            google hk linux
                         </option>
                     </select> <input type="submit" name="btnG" value="Go"
                     onclick="multi_search()" />
                 </fieldset>
             </form>
         </div><!-- end of search div -->
-    </div><!-- end of header -->
+    </div><!-- end of sidebar -->
 
     <div id="maincontent">
         <div id="wecando" class="shadow">
