Two small changes.
Specify weather object's size explictly.
Add a category in surfing.

--- a/html/surfing.html
+++ b/html/surfing.html
@@ -74,16 +74,17 @@
     <div id="maincontent">
         <div id="wecando" class="shadow">
             <h2><a href="../index.html">首页</a> <a href="#surfing" class=
-            "focus">站点导航</a> <a href="resources.html">文档资料</a> <a href=
-            "images.html">美图收藏</a> <a href="music.html">OGG音乐</a> <a href=
-            "about.html">关于</a></h2>
+                    "focus">站点导航</a> <a href="resources.html">文档资料</a> <a href=
+                    "images.html">美图收藏</a> <a href="music.html">OGG音乐</a> <a href=
+                    "about.html">关于</a></h2>
         </div><!-- end of wecando -->
 
         <div id="surfing" class="surfing">
             <h3>站点导航：</h3>
 
             <div class="siteclass dragAble">
-                学习： <a href="http://info.tsinghua.edu.cn/index.jsp">信息门户</a>
+                学习：
+                <a href="http://info.tsinghua.edu.cn/index.jsp">信息门户</a>
                 <a href="thuportal.html">小信息门户</a>
             </div>
 
@@ -96,14 +97,18 @@
 
             <div class="siteclass dragAble">
                 论坛：
+                <a href="http://www.linuxdiyf.com/bbs">红联BBS</a>
+                <a href="http://bbs.fedora-zh.org/">fedora-zh</a>
+            </div>
+
+            <div class="siteclass dragAble">
+                空间：
                 <a href=
                     "http://www.google.com/reader/view/?hl=en&amp;tab=wy">Google
                     Reader</a>
-                <a href="http://www.linuxdiyf.com/bbs">红联BBS</a>
                 <a href="http://passport.renren.com/PLogin.do">上校内</a>
                 <a href="http://linux.cn/">linux.cn</a>
                 <a href="http://hi.baidu.com/alick_9188/home">baidu hi</a>
-
             </div>
 
             <div class="siteclass dragAble">
