--- a/html/cprogramming.html
+++ b/html/cprogramming.html
@@ -49,7 +49,7 @@
         <p>查看GNU BUILD SYSTEM手册，使用<span class="cmdinline">info autoconf</span>。
         自动化得到Makefile的流程图参考info autoconf 的Making configure Scripts一节。</p>
 
-        <p>下面列出一些在线资料</p>
+        <p>下面列出一些特定主题的资料：</p>
 
         <ol>
             <li><a href=
@@ -62,18 +62,25 @@
             <li><a href="http://hi.baidu.com/jlyan/blog/item/6e6cdbf531ba1e2fbc3109f1.html">辨识类型：右左法则
             </a></li>
 
-            <li><a href="http://learn.akae.cn/media/index.html">Linux
-                C编程一站式学习</a></li>
+            <li><a href="http://www.cas.mcmaster.ca/~carette/SE3M04/2004/slides/CCodingStyle.html">C Coding Style Notes</a></li>
 
+        </ol>
+
+        <p>全面的资料：</p>
+        <ol>
             <li><a href="http://net.pku.edu.cn/~yhf/linux_c/">
                 Linux常用C函数</a></li>
+
+            <li><a href="http://learn.akae.cn/media/index.html">Linux
+                C编程一站式学习</a></li>
 
             <li><a href="http://www.iso-9899.info/wiki/Main_Page">##C on
                 Freenode Wiki</a></li>
 
-            <li><a href="http://www.cas.mcmaster.ca/~carette/SE3M04/2004/slides/CCodingStyle.html">C Coding Style Notes</a></li>
+            <li><a href="http://en.wikibooks.org.sixxs.org/wiki/C_Programming">C Programming on Wikibooks</a></li>
 
         </ol>
+
     </div><!-- end of maincontent -->
 
     <div id="bottom">
