--- a/html/about.html
+++ b/html/about.html
@@ -16,6 +16,10 @@
 </script>
     <script type="text/javascript" src="../js/weather.js">
 </script>
+    <script type="text/javascript" src="../js/jquery.js">
+</script>
+    <script type="text/javascript" src="../js/hide.js">
+</script>
 </head>
 
 <body>
@@ -49,8 +53,10 @@
             <a href="about.html" class="focus">关于</a></h2>
         </div><!-- end of wecando -->
 
+        <div id="releasenoteshead">
+            <h2>发行注记&nbsp;<span class="tiny clicktogglereleasenotes">折叠</span></h2>
+        </div>
         <div id="releasenotes">
-            <h2>Release Notes</h2>
 
             <p class="version">Version 1.5(2010/09/19)</p>
 
