--- a/html/cprogramming.html
+++ b/html/cprogramming.html
@@ -64,6 +64,8 @@
 
             <li><a href="http://www.cas.mcmaster.ca/~carette/SE3M04/2004/slides/CCodingStyle.html">C Coding Style Notes</a></li>
 
+            <li><a href="http://lxr.linux.no.sixxs.org/#linux+v2.6.35/Documentation/CodingStyle">Linux Coding Style</a></li>
+
         </ol>
 
         <p>全面的资料：</p>
