--- a/html/surfing.html
+++ b/html/surfing.html
@@ -33,8 +33,7 @@
         </div>
 
         <div id="tagline">
-            <p><strong>致力遵守：<abbr title=
-            "Keep It Simple and Stupid">KISS原则</abbr>与Web标准</strong></p>
+            <p><strong>一个门户</strong></p>
         </div>
     </div><!-- end of header -->
 
@@ -109,6 +108,7 @@
                 <a href="http://passport.renren.com/PLogin.do">上校内</a>
                 <a href="http://linux.cn/">linux.cn</a>
                 <a href="http://hi.baidu.com/alick_9188/home">baidu hi</a>
+                <a href="http://t.sina.com.cn/1824310035">sina微博</a>
             </div>
 
             <div class="siteclass dragAble">
