--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div id="tagline">
             <p><strong>致力遵守：<abbr title=
-            "Keep It Simple and Stupid">KISS原则</abbr>与Web标准</strong></p>
+            "Keep It Simple, Stupid">KISS原则</abbr>与Web标准</strong></p>
         </div>
     </div><!-- end of header -->
 
