better `about me' section

--- a/html/about.html
+++ b/html/about.html
@@ -165,6 +165,16 @@
 
             <p>我很希望html, css的初学者（基本上等于写网站的初学者）能从这个站点得到一些帮助。其实我也是个初学者。:-)</p>
         </div>
+
+        <div class="shadow" id="aboutme">
+            <h2>关于我</h2>
+            <p><a href="html/libra.html">我的星座</a>:-)</p>
+            <p>与我联系：<a href=
+                "mailto:alick9188@163.com">邮箱</a> 或者 <abbr title=
+                "Add me: alick9188@gmail.com">Google talk</abbr>
+            </p>
+        </div>
+
     </div><!-- end of maincontent div -->
 
     <div id="bottom">
