--- a/html/math-test.xhtml
+++ b/html/math-test.xhtml
@@ -62,6 +62,41 @@
       </math>
       .
     </p>
+
+    <!-- Below seems not work. 
+    from: http://www.oschina.net/bbs/thread/7675
+    -->
+    <math xmlns="http://www.w3.org/1998/Math/MathML">
+    <mlongdiv longdivstyle="lefttop">
+    <mn> 3 </mn>
+    <mn> 435.3</mn>
+
+    <mn> 1306</mn>
+
+    <msgroup position="2" shift="-1">
+    <msgroup>
+    <mn> 12</mn>
+    <msline length="2"/>
+    </msgroup>
+    <msgroup>
+    <mn> 10</mn>
+    <mn> 9</mn>
+    <msline length="2"/>
+    </msgroup>
+    <msgroup>
+    <mn> 16</mn>
+    <mn> 15</mn>
+    <msline length="2"/>
+    <mn> 1.0</mn> 
+    </msgroup>
+    <msgroup position='-1'>
+    <mn> 9</mn>
+    <msline length="3"/>
+    <mn> 1</mn>
+    </msgroup>
+    </msgroup>
+    </mlongdiv>
+    </math>
   </body>
 </html>
 <!-- from wikipedia MathML -->
