--- a/index.html
+++ b/index.html
@@ -111,19 +111,18 @@
     </div><!-- end of maincontent -->
 
     <div id="bottom">
-        <div class="shadow">
-            <a href="html/libra.html">关于我</a> 与我联系：<a href=
-            "mailto:alick9188@163.com">邮箱</a> 或者 <abbr title=
-            "Add me: alick9188@gmail.com">Google talk</abbr>
-        </div>
-
         <div class="tiny">
             <p><a href="http://bluefish.openoffice.nl/">Made with formerly
             Bluefish HTML editor and now VIM.</a></p>
 
             <p><a href="http://validator.w3.org/">Valid XHTML 1.0 Strict</a>
-            <span class="fun">推荐使用良好支持标准的浏览器</span><a href=
-            "http://www.mozillaonline.com/">获得Firefox</a></p>
+            <span class="fun">推荐使用良好支持
+                <a href="http://www.webstandards.org/learn/faq/">
+                    Web标准</a>的浏览器，如
+                </span>
+                <a href=
+                    "http://www.mozillaonline.com/">Firefox</a>
+                </p>
 
             <p><a rel="license" href=
             "http://creativecommons.org/licenses/by-sa/2.5/cn/"><img alt=
