Add a link to online circuit macro example.

--- a/html/tex.html
+++ b/html/tex.html
@@ -72,6 +72,9 @@
 
             <li><a href="http://www.aaronbraver.com/TeXTabTool.html">Tabular
             Generator</a></li>
+
+            <li><a href="http://ece.uwaterloo.ca/~aplevich/Circuit_macros/html/examples.html">Circuit_macro examples</a></li>
+
         </ol>
     </div><!-- end of maincontent -->
 
