--- a/html/tex.html
+++ b/html/tex.html
@@ -75,6 +75,9 @@
 
             <li><a href="http://ece.uwaterloo.ca/~aplevich/Circuit_macros/html/examples.html">Circuit_macro examples</a></li>
 
+            <li><a href=
+                "http://dsec.pku.edu.cn/~yuhj/wiki/TeXSlides.html">
+            做幻灯片(Slide)的建议</a></li>
         </ol>
     </div><!-- end of maincontent -->
 
