--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <input type="hidden" name="oe" value="UTF-8" />
                     <abbr title="用google.cn搜索">
                         <input type="text" name="q"
-                        size="20" maxlength="255" value="" />
+                        maxlength="255" value="" />
                     </abbr> 
                     <!--<input type="radio" name="sitesearch" value="http://learn.tsinghua.edu.cn:8080/" /><span class="fun">tsinghuaren</span>-->
                      <select id="select">
