--- a/html/about.html
+++ b/html/about.html
@@ -58,6 +58,8 @@
         </div>
         <div id="releasenotes">
 
+            <p>当前版本：1.7</p>
+
             <p class="version">Version 1.5(2010/09/19)</p>
 
             <ol>
