Add git page `git.html'.

--- a/html/resources.html
+++ b/html/resources.html
@@ -93,6 +93,7 @@
                     <li><a href="tex.html">TeX</a></li>
                     <li><a href="cprogramming.html">C语言</a></li>
                     <li><a href="matlab.html">Matlab</a></li>
+                    <li><a href="git.html">git</a></li>
                     <li><a href="spice.html">SPICE</a></li>
                     <li><a href="math-test.xhtml">MathML</a></li>
                     <li><a href=
