--- a/html/git.html
+++ b/html/git.html
@@ -44,8 +44,8 @@
                 <a href="http://www-cs-students.stanford.edu/~blynn/gitmagic/index.html">GIT MAGIC</a>，
                 <a href="http://docs.google.com/View?id=dfwthj68_675gz3bw8kj">（中文版）</a>
                 </li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="http://sites.google.com/a/kingofat.com/wiki/git-tutorial">git使用指南</a>比较基础，一般够用了</li>
+                <li><a href="http://www.kuqin.com/docs/gittutorcn.html">GIT中文教程</a>，貌似有点旧</li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
 	</div>
