Achieve navi menu by ul tag. Add git resource.

--- a/html/git.html
+++ b/html/git.html
@@ -18,7 +18,7 @@
     <div id="header">
 
         <div id="sitebranding">
-            <h1>欢迎光临</h1>
+            <h1>Git Intro</h1>
         </div>
 
         <div id="tagline">
@@ -46,8 +46,10 @@
                 </li>
                 <li><a href="http://sites.google.com/a/kingofat.com/wiki/git-tutorial">git使用指南</a>比较基础，一般够用了</li>
                 <li><a href="http://www.kuqin.com/docs/gittutorcn.html">GIT中文教程</a>，貌似有点旧</li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="http://progit.org/book/zh/">Pro Git</a>电子版，
+                <a href="http://progit.org.sixxs.org/book/zh/">IPV6连接</a>
+                </li>
+                <li><a href="#">To be continued.</a></li>
 	</div>
 
     </div><!-- end of maincontent -->
