--- a/index.html
+++ b/index.html
@@ -83,13 +83,14 @@
 
     <div id="maincontent">
         <div id="wecando" class="shadow">
-            <h2><a href="index.html" class="focus">首页</a>
-                <a href="html/surfing.html">站点导航</a>
-                <a href="html/resources.html">文档资料</a>
-                <a href="html/images.html">美图收藏</a>
-                <a href="html/music.html">OGG音乐</a>
-                <a href="html/about.html">关于</a>
-            </h2>
+            <ul>
+                <li><a href="index.html" class="focus">首页</a></li>
+                <li><a href="html/surfing.html">站点导航</a></li>
+                <li><a href="html/resources.html">文档资料</a></li>
+                <li><a href="html/images.html">美图收藏</a></li>
+                <li><a href="html/music.html">OGG音乐</a></li>
+                <li><a href="html/about.html">关于</a></li>
+            </ul>
         </div><!-- end of wecando -->
         <div class="dragAble" style="width: 30%;"> 测试一下可拖动 </div>
         <div class="box_rgba dragAble" style="width: 30%;"> 测试一下透明和可拖动</div>
