--- a/html/resources.html
+++ b/html/resources.html
@@ -67,14 +67,14 @@
 
     <div id="maincontent">
         <div id="wecando" class="shadow">
-            <h2>
-                <a href="../index.html">首页</a>
-                <a href="surfing.html">站点导航</a>
-                <a href="#resources" class="focus">文档资料</a>
-                <a href="images.html">美图收藏</a>
-                <a href="music.html">OGG音乐</a>
-                <a href="about.html">关于</a>
-            </h2>
+            <ul>
+                <li><a href="../index.html">首页</a></li>
+                <li><a href="surfing.html">站点导航</a></li>
+                <li><a href="#resources" class="focus">文档资料</a></li>
+                <li><a href="images.html">美图收藏</a></li>
+                <li><a href="music.html">OGG音乐</a></li>
+                <li><a href="about.html">关于</a></li>
+            </ul>
         </div><!-- end of wecando -->
 
         <div id="resources">
