Add git references.

--- a/html/git.html
+++ b/html/git.html
@@ -40,15 +40,23 @@
 	<div>
             <p>git 资源：</p>
             <ol>
+                <li><a href="http://progit.org/book/zh/">Pro Git 中文版</a>电子版，
+                <a href="http://progit.org.sixxs.org/book/zh/">IPV6连接</a>
+                </li>
+                <li>
+                <a href="http://book.git-scm.com/">The Git Community Book</a>，
+                <a href="http://book.git-scm.com/book.pdf">pdf下载</a>
+                </li>
                 <li>
                 <a href="http://www-cs-students.stanford.edu/~blynn/gitmagic/index.html">GIT MAGIC</a>，
                 <a href="http://docs.google.com/View?id=dfwthj68_675gz3bw8kj">（中文版）</a>
                 </li>
+                <li><a href="http://jonas.nitro.dk/git/quick-reference.html">Git Quick Reference</a></li>
+                <li><a href="http://cheat.errtheblog.com/s/git">cheat sheet</a></li>
+                <li><a href="http://sysmonblog.co.uk/misc/git_by_example/">Git By Example</a></li>
                 <li><a href="http://sites.google.com/a/kingofat.com/wiki/git-tutorial">git使用指南</a>比较基础，一般够用了</li>
                 <li><a href="http://www.kuqin.com/docs/gittutorcn.html">GIT中文教程</a>，貌似有点旧</li>
-                <li><a href="http://progit.org/book/zh/">Pro Git</a>电子版，
-                <a href="http://progit.org.sixxs.org/book/zh/">IPV6连接</a>
-                </li>
+                <li><a href="http://www.youtube.com/watch?v=4XpnKHJAok8">Google Tech Talk: Linus Torvalds on git</a></li>
                 <li><a href="#">To be continued.</a></li>
 	</div>
 
