--- a/html/git.html
+++ b/html/git.html
@@ -56,7 +56,7 @@
                 <li><a href="http://sysmonblog.co.uk/misc/git_by_example/">Git By Example</a></li>
                 <li><a href="http://sites.google.com/a/kingofat.com/wiki/git-tutorial">git使用指南</a>比较基础，一般够用了</li>
                 <li><a href="http://www.kuqin.com/docs/gittutorcn.html">GIT中文教程</a>，貌似有点旧</li>
-                <li><a href="http://www.youtube.com/watch?v=4XpnKHJAok8">Google Tech Talk: Linus Torvalds on git</a></li>
+                <li><a href="http://www.youtube.com/watch?v=4XpnKHJAok8">Google Tech Talk: Linus Torvalds on git</a>, The<a href="">Transcript</a></li>
                 <li><a href="#">To be continued.</a></li>
 	</div>
 
