Add unicode page, python page. Enrich tex page.

--- a/html/resources.html
+++ b/html/resources.html
@@ -92,6 +92,7 @@
                     <li><a href="fvwm.html">fvwm</a></li>
                     <li><a href="tex.html">TeX</a></li>
                     <li><a href="cprogramming.html">C语言</a></li>
+                    <li><a href="python.html">Python语言</a></li>
                     <li><a href="matlab.html">Matlab</a></li>
                     <li><a href="git.html">git</a></li>
                     <li><a href="spice.html">SPICE</a></li>
