--- a/html/tex.html
+++ b/html/tex.html
@@ -53,31 +53,38 @@
 
         <ol>
             <li><a href=
-            "http://code.google.com/p/ctex-kit/wiki/SimpleChineseTemplates">ctex-kit
-            各种工具链下最简单的中文文档模板</a></li>
+                "http://code.google.com/p/ctex-kit/wiki/SimpleChineseTemplates">ctex-kit
+                各种工具链下最简单的中文文档模板</a></li>
 
             <li><a href=
-            "http://code.google.com/p/ctex-kit/wiki/SimpleChineseTemplates">科学网-潘林的博客-TEX</a></li>
+                "http://code.google.com/p/ctex-kit/wiki/SimpleChineseTemplates">科学网-潘林的博客-TEX</a></li>
 
             <li><a href="http://www.codecogs.com/latex/eqneditor.php">Online
-            LaTeX Equation Editor</a></li>
+                LaTeX Equation Editor</a></li>
 
             <li><a href=
-            "http://yihui.name/cn/2010/02/misc-issues-in-latex-lyx-r-sweave-pgfsweave/">
-            关于LaTeX+LyX+R/Sweave+pgfSweave+PDF图形的若干中文问题 | 谢益辉</a></li>
+                "http://yihui.name/cn/2010/02/misc-issues-in-latex-lyx-r-sweave-pgfsweave/">
+                关于LaTeX+LyX+R/Sweave+pgfSweave+PDF图形的若干中文问题 | 谢益辉</a></li>
+
+            <li><a href="http://www.ctex.org/documents/latex/latex2e-html/ltx-2.html">Help On LaTeX Commands</a></li>
 
             <li><a href=
-            "http://blog.sina.com.cn/s/blog_61403f080100ej8t.html">latex帮助
-            （显示数学公式）_老李_新浪博客</a></li>
+                "http://blog.sina.com.cn/s/blog_61403f080100ej8t.html">latex帮助
+                （显示数学公式）_老李_新浪博客</a></li>
 
             <li><a href="http://www.aaronbraver.com/TeXTabTool.html">Tabular
-            Generator</a></li>
+                Generator</a></li>
 
             <li><a href="http://ece.uwaterloo.ca/~aplevich/Circuit_macros/html/examples.html">Circuit_macro examples</a></li>
 
             <li><a href=
                 "http://dsec.pku.edu.cn/~yuhj/wiki/TeXSlides.html">
-            做幻灯片(Slide)的建议</a></li>
+                做幻灯片(Slide)的建议</a></li>
+
+            <li><a href="http://tex.loria.fr/prod-graph/zoonekynd/metapost/metapost.html">Metapost : exemples</a></li>
+
+            <li><a href="http://www.reimeika.ca/marco/prettyplots/">Making plots using Octave, gnuplot, and LaTeX</a></li>
+
         </ol>
     </div><!-- end of maincontent -->
 
