--- a/html/about.html
+++ b/html/about.html
@@ -58,7 +58,7 @@
         </div>
         <div id="releasenotes">
 
-            <p>当前版本：1.8</p>
+            <p>当前版本：v1.9</p>
 
             <p class="version">Version 1.5(2010/09/19)</p>
 
