--- a/html/surfing.html
+++ b/html/surfing.html
@@ -85,26 +85,26 @@
         <div id="surfing" class="surfing">
             <h3>站点导航：</h3>
 
-            <div class="siteclass dragAble">
+            <div class="siteclass">
                 学习：
                 <a href="http://info.tsinghua.edu.cn/index.jsp">信息门户</a>
                 <a href="thuportal.html">小信息门户</a>
             </div>
 
-            <div class="siteclass dragAble">
+            <div class="siteclass">
                 搜索：
                 <a href="http://www.google.com">Google.com</a>
                 <a href= "http://www.google.com/linux">Linux搜索</a>
                 <a href="http://www.baidu.com/">Baidu</a>
             </div>
 
-            <div class="siteclass dragAble">
+            <div class="siteclass">
                 论坛：
                 <a href="http://www.linuxdiyf.com/bbs">红联BBS</a>
                 <a href="http://bbs.fedora-zh.org/">fedora-zh</a>
             </div>
 
-            <div class="siteclass dragAble">
+            <div class="siteclass">
                 空间：
                 <a href=
                     "http://www.google.com/reader/view/?hl=zh-CN&amp;tab=wy">Google
@@ -115,13 +115,17 @@
                 <a href="http://t.sina.com.cn/1824310035">sina微博</a>
             </div>
 
-            <div class="siteclass dragAble">
+            <div class="siteclass">
                 工具： <a href="http://www.poptool.net/enet/mp3_lrc/">LRC歌词</a>
                 <a href="calcu_constellation_zodiac.html">星座属相计算器</a>
                 <a href="http://cgbt.cn/forums/viewthread.php?tid=237846">IPV6电视电台</a>
                 <a href="huochepiao.html">火车票查询</a>
                 <a href="http://www.ip138.com/ips8.asp">IP查询</a>
                 <a href="utils.html">更多</a>
+            </div>
+
+            <div class="siteclass">
+                友链： <a href="http://learn.tsinghua.edu.cn:8080/2008011108/index.htm">王鹤达的个人主页</a>
             </div>
         </div>
     </div><!-- end of maincontent -->
