huochepiao.html: make sidebar

--- a/html/huochepiao.html
+++ b/html/huochepiao.html
@@ -24,6 +24,13 @@
         <div id="sitebranding">
             <h1>火车票查询</h1>
         </div>
+        <div id="tagline">
+            <p>数据来自huochepiao.com</p>
+        </div>
+
+    </div><!-- end of header -->
+
+    <div id="sidebar">
 
         <div id="timer">
             <!-- show current time -->
@@ -35,39 +42,8 @@
                 </object>
         </div>
 
-        <div id="tagline">
-            <p>数据来自huochepiao.com</p>
-        </div>
 
-        <div id="search">
-            <!-- SiteSearch Google copyed from Google but modified-->
-
-            <form method="get" id="form1" action=
-            "http://www.google.com.hk/search">
-                <fieldset>
-                    <input type="hidden" name="ie" value="UTF-8" />
-                    <input type="hidden" name="oe" value="UTF-8" />
-                    <abbr title="用google.cn搜索">
-                        <input type="text" name="q"
-                        size="20" maxlength="255" value="" />
-                    </abbr> 
-                    <!--<input type="radio" name="sitesearch" value="http://learn.tsinghua.edu.cn:8080/" /><span class="fun">tsinghuaren</span>-->
-                     <select id="select">
-                        <option selected="selected" value="0">
-                            google.com.hk
-                        </option>
-
-                        <option value="1">
-                            google.com.hk/linux
-                        </option>
-                    </select> <input type="submit" name="btnG" value="Go"
-                    onclick="multi_search()" />
-                </fieldset>
-            </form>
-        </div><!-- end of search div -->
-
-    </div><!-- end of header -->
-
+    </div>
     <div id="maincontent">
         <div id="wecando">
             <h2><a href="../index.html" class="focus">首页</a> <a href="surfing.html">站点导航</a>
