--- a/html/emacs.html
+++ b/html/emacs.html
@@ -33,8 +33,11 @@
             </ul>
         </div><!-- end of wecando -->
 
-        <p> Emacs 是一个流行的文本编辑器。多么流行？嗯，和 Vim 差不多
-        。<p>
+        <p> Emacs 是一个流行的文本编辑器。多么流行？嗯，和 
+        <a href="vim.html">Vim</a> 差不多。<p>
+        <p> Emacs 如今也是无所不在的，至少它的键绑定是的。
+        GNU Readline ，MATLAB UNIX版默认的键绑定都是 Emacs 风格的。
+        </p>
         <h2>Emacs的全称</h2>
         <p>Emacs 是什么的缩写？不同人有不同的见解：</p>
         <pre>
