--- a/html/resources.html
+++ b/html/resources.html
@@ -87,7 +87,7 @@
                     <li><a href="Unix_philosophy.html">Unix哲学</a></li>
                     <li><a href=
                     "../txt/humourous_Linux_UNIX_commands.txt">幽默命令</a></li>
-                    <li><a href="What_is_EMACS.html">EMACS</a></li>
+                    <li><a href="emacs.html">EMACS</a></li>
                     <li><a href="vim.html">VIM</a></li>
                     <li><a href="fvwm.html">fvwm</a></li>
                     <li><a href="tex.html">TeX</a></li>
