Try xhtml del and ins tag.

--- a/html/about.html
+++ b/html/about.html
@@ -163,8 +163,11 @@
             中国大陆许可协议</em>进行许可。其条款可以通过点击首页下方的相关链接获得。也可以在<a href=
             "http://creativecommons.org/licenses/by-sa/2.5/cn/">这里</a>查看。</strong></p>
 
+    <!-- del tag is nice :) 
+      Better use del and ins (means `insert' ?) together
+      -->
             <p>
-            版权归我所有，呵呵。当然，引文的版权仍归其原作者享有。许可的问题相当令人头疼，看看现在已经有多少个各不相同的许可证吧。</p>
+            版权归我所有，呵呵。当然，引文的版权仍归其原作者享有。<del>许可的问题相当令人头疼，看看现在已经有多少个各不相同的许可证吧。</del><ins>目前看来 CC 协议比较不错。</ins></p>
 
             <p>
             许可：您可以自由地复制网站上的各种信息（文本，图片等等）。但是请注意，引文除外。（它们对复制、修改、再发行的许可可能有其他的要求。<strong>请注意原作者的声明。</strong>）</p>
