--- a/html/about.html
+++ b/html/about.html
@@ -177,7 +177,7 @@
 
         <div class="shadow" id="aboutme">
             <h2>关于我</h2>
-            <p><a href="html/libra.html">我的星座</a>:-)</p>
+            <p><a href="../html/libra.html">我的星座</a>:-)</p>
             <p>与我联系：<a href=
                 "mailto:alick9188@163.com">邮箱</a> 或者 <abbr title=
                 "Add me: alick9188@gmail.com">Google talk</abbr>
