--- a/html/surfing.html
+++ b/html/surfing.html
@@ -127,6 +127,10 @@
             <div class="siteclass">
                 友链： <a href="http://learn.tsinghua.edu.cn:8080/2008011108/index.htm">王鹤达的个人主页</a>
             </div>
+
+            <div class="siteclass">
+                认证： <a href="https://auth-1.ccert.edu.cn:8443/eportal/index.jsp?s=e070690f5e1345db642039e328afb748&mac=f7d97f9e764d075e60a8e653dacc388f&vid=e3cbc67d63369647&port=946dc6803fa4b835&url=883dfa24377e48c91a6998b0929594e035ae3f8b51df504b2cd1a1a5b7e9cc3b680b8a92680054d9">IPv6 认证</a>
+            </div>
         </div>
     </div><!-- end of maincontent -->
 
